        of each generated CIF data block structure.
    - COD::CIF::Tags::Manage:
      - allowing zero-length data block names in new_datablock() in order to
        make it compatible with the usage in COD::CIF::Parser::Yapp.
    - COD::UserMessage:
      - the interface of print_message(), sprint_message(), note(), warning(),
        error() and debug_note() subroutines.
  * Removed:
    - COD::CIF::Data::CODPredepositionCheck.
    - COD::ShowStruct.
    - STAR::Parser sources.
    - sdf_add_cod_data:
      - the deprecated --tmp-dir option.
    - cif_parse_old_star script.
    - cif_printout:
      - the deprecated --output-struct option.
    - cif_validate:
      - the deprecated --debug option.
    - cod_predeposition_check script.
    - codcif:
      - unused functions process_escapes(), strclone(), strnclone(),
        strappend() and translate_escape().

cod-tools (unreleased)

  * Fixed:
    - test outputs for codcif2sdf and molcif2sdf.

cod-tools (2.5)

  * Added:
    - cif_molecule:
      - command line option to turn off special treatment of disorder groups
        with negative indices;
      - warning about the unity symmetry operation not being the first one
        on the symmetry operation list. 
    - cif_validate:
      - checking if data items from the same category reside in the same loop;
      - reporting of missing parent data items;
      - the --allow-double-precision-notation and
        --no-allow-double-precision-notation options;
      - the --no-report-deprecated option as an alias of the
        --ignore-deprecated option.
      - the --max-message-count option.
    - COD::AuthorNames:
      - author_names_are_the_same() subroutine.
    - COD::CIF::DDL::DDL1:
      - the get_list_constraint_type() and get_dic_item_value() subroutines.
    - COD::CIF::Data::AtomList:
      - a warning about data items used in the construction of the atom
        structure not residing in the same loop;
    - COD::CIF::Tags::Manage: