@@ -29,6 +29,9 @@ cod-tools (3.0.0)
     - COD::UserMessage:
       - the interface of print_message(), sprint_message(), note(), warning(),
         error() and debug_note() subroutines.
+    - codcif:
+      - cif_lexer_set_line_length_limit() and cif_lexer_set_tag_length_limit()
+        now accept and return size_t instead of int to comply with strlen().
   * Removed:
     - COD::CIF::Data::CODPredepositionCheck.
     - COD::ShowStruct.
